Fix DurationField overflow when filling container

--- a/frontend/src/components/widgets/DurationField.css
+++ b/frontend/src/components/widgets/DurationField.css
@@ -1,3 +1,7 @@
 .duration-field {
   box-sizing: content-box;
 }
+
+.bp4-fill.duration-field {
+  box-sizing: inherit; 
+}
